@@ -1,11 +1,14 @@
 package com.askel.coursesplatform.service.impl;
 
 import com.askel.coursesplatform.cache.UserCache;
+import com.askel.coursesplatform.exception.ResourceNotFoundException;
+import com.askel.coursesplatform.factory.UserDtoFactory;
+import com.askel.coursesplatform.model.dto.UserResponse;
 import com.askel.coursesplatform.model.dto.request.UserRequestDto;
-import com.askel.coursesplatform.model.dto.response.UserResponseDto;
 import com.askel.coursesplatform.model.entity.Course;
 import com.askel.coursesplatform.model.entity.User;
 import com.askel.coursesplatform.model.enums.CourseStatus;
+import com.askel.coursesplatform.model.enums.UserRoles;
 import com.askel.coursesplatform.repository.CourseRepository;
 import com.askel.coursesplatform.repository.UserRepository;
 import com.askel.coursesplatform.service.UserService;
@@ -13,53 +16,63 @@ import com.askel.coursesplatform.service.mapper.UserMapper;
 import com.askel.coursesplatform.utils.ErrorMessages;
 import jakarta.persistence.EntityNotFoundException;
 import jakarta.transaction.Transactional;
-import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class UserServiceImpl implements UserService {
 
-    private final CourseRepository courseRepository;
     private final UserRepository userRepository;
-    private final UserMapper userMapper;
+    private final CourseRepository courseRepository;
     private final UserCache userCache;
+    private final UserMapper userMapper;
+    private final UserDtoFactory userDtoFactory;
 
     @Override
-    public List<UserResponseDto> getAllUsers() {
+    public List<UserResponse> getAllUsers() {
         return userRepository.findAll().stream()
-                .map(userMapper::toUserResponseDto)
-                .toList();
+                .map(userDtoFactory::create)
+                .collect(Collectors.toList());
     }
 
     @Override
-    public UserResponseDto getUserById(Long id) {
+    public UserResponse getUserById(Long id) {
         User user = userCache.get(id);
         if (user != null) {
-            return userMapper.toUserResponseDto(user);
+            return userDtoFactory.create(user);
         }
 
         user = userRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException(ErrorMessages.USER_NOT_FOUND));
 
         userCache.put(id, user);
-        return userMapper.toUserResponseDto(user);
+        return userDtoFactory.create(user);
+    }
+
+    @Override
+    public List<UserResponse> getUsersByRole(UserRoles role) {
+        return userRepository.findByRole(role).stream()
+                .map(userDtoFactory::create)
+                .collect(Collectors.toList());
     }
 
     @Override
     @Transactional
-    public UserResponseDto createUser(UserRequestDto userRequestDto) {
-        User user = userMapper.toUser(userRequestDto);
+    public UserResponse createUser(UserRequestDto userRequestDto) {
+        User user = userMapper.toUserFromDto(userRequestDto);
+        //user.setRole(UserRoles.USER); // По умолчанию
+
         User savedUser = userRepository.save(user);
-
         userCache.put(savedUser.getId(), savedUser);
-        return userMapper.toUserResponseDto(savedUser);
+        return userDtoFactory.create(savedUser);
     }
 
     @Override
     @Transactional
-    public UserResponseDto updateUser(Long id, UserRequestDto userRequestDto) {
+    public UserResponse updateUser(Long id, UserRequestDto userRequestDto) {
         User user = userRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException(ErrorMessages.USER_NOT_FOUND));
 
@@ -68,7 +81,7 @@ public class UserServiceImpl implements UserService {
 
         User updatedUser = userRepository.save(user);
         userCache.put(id, updatedUser);
-        return userMapper.toUserResponseDto(updatedUser);
+        return userDtoFactory.create(updatedUser);
     }
 
     @Override
@@ -77,17 +90,76 @@ public class UserServiceImpl implements UserService {
         User user = userRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException(ErrorMessages.USER_NOT_FOUND));
 
-        for (Course course : user.getEnrolledCourses()) {
-            course.getStudents().remove(user);
-        }
+        // Обработка связанных курсов
+        processEnrolledCourses(user);
+        processTaughtCourses(user);
 
-        for (Course course : user.getTaughtCourses()) {
-            course.setInstructor(null); //for now
+        userRepository.delete(user);
+        userCache.remove(id);
+    }
+
+    @Override
+    public UserResponse getUserByEmail(String email) {
+        User user = userRepository.findByEmail(email)
+                .orElseThrow(() -> new ResourceNotFoundException(ErrorMessages.USER_NOT_FOUND));
+        return userDtoFactory.create(user);
+    }
+
+    @Override
+    public boolean checkEmailExists(String email) {
+        return userRepository.existsByEmail(email);
+    }
+
+    @Override
+    public List<UserResponse> getUsersEnrolledInCourse(Long courseId) {
+        return userRepository.findByEnrolledCoursesId(courseId).stream()
+                .map(userDtoFactory::create)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public List<UserResponse> getUsersTeachingCourse(Long courseId) {
+        return userRepository.findByTaughtCoursesId(courseId).stream()
+                .map(userDtoFactory::create)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public List<UserResponse> getUsersByName(String namePart) {
+        return userRepository.findByNameContainingIgnoreCase(namePart).stream()
+                .map(userDtoFactory::create)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public List<UserResponse> getUsersByRoleAndName(UserRoles role, String namePart) {
+        return userRepository.findByRoleAndNameContainingIgnoreCase(role, namePart).stream()
+                .map(userDtoFactory::create)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public UserResponse changeUserRole(Long userId, UserRoles newRole) {
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new ResourceNotFoundException(ErrorMessages.USER_NOT_FOUND));
+
+        user.setRole(newRole);
+        User updatedUser = userRepository.save(user);
+        userCache.put(userId, updatedUser);
+        return userDtoFactory.create(updatedUser);
+    }
+
+    private void processEnrolledCourses(User user) {
+        user.getEnrolledCourses().forEach(course ->
+                course.getStudents().remove(user)
+        );
+    }
+
+    private void processTaughtCourses(User user) {
+        user.getTaughtCourses().forEach(course -> {
+            course.setInstructor(null);
             course.setStatus(CourseStatus.PENDING_INSTRUCTOR);
             courseRepository.save(course);
-        }
-
-        userRepository.deleteById(id);
-        userCache.remove(id);
+        });
     }
 }
